fix: Make the preformatted code blocks scrollable when the content is bigger than the container. It should fix the issue that made some pages to overflow in weird layouts

--- a/assets/css/styles/layout.css
+++ b/assets/css/styles/layout.css
@@ -343,3 +343,8 @@ div.static-page-card {
 div.static-page-title {
     margin-bottom: 0.2rem;
 }
+
+/* add an horizontal scrollbar when content of pre is bigger that its container */
+pre {
+    overflow: auto;
+}
